<resources>
    <string name="app_name">MarvelProject</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="description_details">asdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKKasdasdadajsdnaisdnaKKKKKKKKKKKKKKKKKKKKKK</string>
    <string name="title_details">Title</string>
    <string name="name_character_item">Name</string>
    <string name="toolbar_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_marvel_toolbar">MARVEL</string>
    <string name="title_favorite_fragment">Favoritos</string>
    <string name="verify_internet">Verifique sua internet e tente novamente!</string>
    <string name="connection_error">Erro de conexão</string>
    <string name="dialog_confirm">Confirmar</string>
    <string name="toast_remove">Removed from favorites</string>
    <string name="conection_error">Erro de conexão!</string>
    <string name="verifiry_your_internet">Verifique sua internet e tente novamente!</string>
    <string name="try_again">Tentar novamente</string>
    <string name="negative_no">Não</string>
    <string name="confirmation">Confirmação</string>
    <string name="message_connection">Tem certeza que gostaria de deletar este personagem</string>
    <string name="delete">Deletar</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="username_hint">Usuário</string>
    <string name="password_hint">Senha</string>
    <string name="button_login">LOGIN</string>
    <string name="create_account">CRIE SUA CONTA</string>
    <string name="name">Nome</string>
    <string name="email_text">Email</string>
    <string name="confirm_email">Confirme o email</string>
    <string name="next_button">Próximo</string>
    <string name="back_button">VOLTAR</string>
    <string name="defina_sua_senha">Defina sua senha</string>
    <string name="password">Senha</string>
    <string name="confirm_your_password">Confirme sua senha</string>
    <string name="back">voltar</string>
    <string name="choose_your_photo">ESCOLHA SUA FOTO</string>
    <string name="choose_later">Definir mais tarde</string>
    <string name="confirm_bottom">CONFIRMAR</string>
    <string name="imagem_no_card_view">Imagem no card view</string>
    <string name="welcome">Seja bem-vindo(A)</string>
    <string name="go_to_login">Agora efetue seu login</string>
    <string name="Logo">Logo Imagem</string>
    <string name="create_your_account">Não tem uma conta? Registre-se</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="small_password">Senha deve possuir 8 caracteres</string>
    <string name="email_confirmation">Emails são diferentes</string>
    <string name="different_password">Senhas não são iguais</string>
    <string name="invalid_name">Digite um nome válido</string>
    <string name="FAVORITAR_FAB">FAVORITAR</string>
    <string name="FAVORITADO_FAB">FAVORITADO</string>
    <string name="back_to_character">PERSONAGEM</string>
    <string name="comics">COMICS</string>
    <string name="series">SERIES</string>
    <string name="carrosel_series">carrosel series</string>
    <string name="left_shadow">left_shadow</string>
    <string name="right_shadow">right shadow</string>
    <string name="personagem">PERSONAGEM</string>

</resources>