<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/toolbar_search"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/next_page"
        android:title="@string/next"
        android:visible="true"
        android:icon="@drawable/ic_baseline_arrow_circle_up_24"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/previous_page"
        android:title="@string/previous"
        android:visible="true"
        android:icon="@drawable/ic_baseline_arrow_circle_down_24"
        app:showAsAction="ifRoom"/>

</menu>